--- a/fdn-ctg.html
+++ b/fdn-ctg.html
@@ -176,7 +176,7 @@
 																		<h5><h7>Creative Director </h7>Kevin Mones
 																			<br class="destroy"><h7>Art Director </h7>Peiying Cheung
 																			<br class="destroy"><h7>Designer </h7>Ben Lam, Sonica Katoch
-																			<br class="destroy"><h7>Motion </h7>Hasan Mohamad
+																			<br class="destroy"><h7>Motion </h7>Hasan Dadah
 																			<br class="destroy"><h7>Producer </h7>Duane Watson
 																			<br class="destroy"><h7>Strategy </h7>Iain Crerar
 																			<br class="destroy"><h7>Copy Writer </h7>Clayton Hansler
