--- a/globljam.html
+++ b/globljam.html
@@ -175,7 +175,7 @@
 																		<h5><h7>Creative Director </h7>Kevin Mones
 																			<br class="destroy"><h7>Art Director </h7>Peiying Cheung & Wilson Duong
 																			<br class="destroy"><h7>Designer </h7>Sonica Katoch 
-																			<br class="destroy"><h7>Motion </h7>Hasan Mohamad
+																			<br class="destroy"><h7>Motion </h7>Hasan Dadah
 																			<br class="destroy"><h7>Copy Writer </h7>Clayton Hansler</h5>
 																</div>
 
