--- a/globljam.html
+++ b/globljam.html
@@ -129,9 +129,9 @@
                     </div>
                 </div>
                 <div id="hero-bg-wrapper">
-                    <!-- <div id="hero-image-parallax">
+                    <div id="hero-image-parallax">
                         <div id="hero-bg-image" style="background-image:url(images/globljam-hero.jpg)">
-                        </div> -->
+                        </div>
 												<div class="hero-video-wrapper">
 															<video loop muted class="bgvid">
 																	<source src="motion/CBxSN_Transition.mp4" type="video/mp4">
