--- a/globljam.html
+++ b/globljam.html
@@ -222,7 +222,7 @@
                         <div class="container">
 
                             <h2>COMING SOON</h2>
-														<h5><a href="http://example.com/" style="color:#35FF69;">Check out GLOBLJAM.ca</a></h5>
+														<h5><a href="http://globljam.ca/" style="color:#35FF69;">Check out GLOBLJAM.ca</a></h5>
 
                         </div>
                     </div>
