--- a/globljam.html
+++ b/globljam.html
@@ -127,18 +127,19 @@
                             </div>
                         </div>
                     </div>
-                </div>
-								<div id="hero-bg-wrapper">
-										<div id="hero-image-parallax">
-												<div id="hero-bg-image" style="background-image:url(images/globljam-hero.jpg)">
-													<div class="hero-video-wrapper">
-																<video loop muted class="bgvid">
-																		<source src="motion/CBxSN_Transition.mp4" type="video/mp4">
-									<source src="motion/Transistion-Set.mp4" type="video/webm">
-																</video>
-													</div>
-                    </div>
-                </div>
+									</div>
+	                <div id="hero-bg-wrapper">
+	                    <div id="hero-image-parallax">
+	                        <div id="hero-bg-image" style="background-image:url(images/toronto-fifa-hero.jpeg)">
+	                        	<div class="hero-video-wrapper">
+	                                <video loop muted class="bgvid">
+	                                    <source src="motion/Transistion-Set.mp4" type="video/mp4">
+										<source src="motion/Transistion-Set.mp4" type="video/webm">
+	                                </video>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
                 <!--/Hero Section -->
 
 
