--- a/globljam.html
+++ b/globljam.html
@@ -233,8 +233,8 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/01hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project01.html">
+                            <div class="next-project-image" style="background-image:url(images/toronto-fifa-hero.jpeg"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fifa-2026.html">
                                 <div class="main-title">FIFA <span>2026</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
