--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -189,9 +189,14 @@
 												<div class="container">
 
 														<div class="one_third has-animation" data-delay="150">
-																		<p>Client</p>
-																		<h5>Toronto Raptors (in-house)</h5>
-																		<h5>Hudson's Bay Company</h5>
+																			<p>Client</p>
+																			<h5>TORONTO RAPTORS (IN-HOUSE)
+																			<br class="destroy">HUDSON'S BAY COMPANY</h5>
+																</div>
+
+														<div class="one_third has-animation" data-delay="150">
+																		<p>Location</p>
+																		<h5>Scotiabank Arena</h5>
 																</div>
 
 														<div class="one_third last has-animation" data-delay="150">
