--- a/mad-love.html
+++ b/mad-love.html
@@ -265,8 +265,144 @@
 										</div>
 
 										<!-- Row -->
+										<div class="vc_row full">
 
-											<div class="vc_row row_padding_top has-animation" data-delay="10">
+												<div class="container has-animation" data-delay="100">
+
+														<!-- Collage -->
+														<div id="justified-grid">
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/07_Kia Nurse 1_IG.jpg">
+																				<img src="images/projects/ml-collage/07_Kia Nurse 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/18_Shay Colley 1_IG.jpg">
+																				<img src="images/projects/ml-collage/18_Shay Colley 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/04_Kayla Alexander_FB.jpg">
+																				<img src="images/projects/ml-collage/04_Kayla Alexander_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/01_Quin Dornstauder_IGS.jpg">
+																				<img src="images/projects/ml-collage/01_Quin Dornstauder_IGS.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/05_Jamie Scott 1_IG.jpg">
+																				<img src="images/projects/ml-collage/05_Jamie Scott 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/22_Nirra Fields_FB.jpg">
+																				<img src="images/projects/ml-collage/22_Nirra Fields_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/11_Miranda Ayim 1_IG.jpg">
+																				<img src="images/projects/ml-collage/11_Miranda Ayim 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/09_Natalie Achonwa 1_IG.jpg">
+																				<img src="images/projects/ml-collage/09_Natalie Achonwa 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/15_Kim Gaucher 1_IG.jpg">
+																				<img src="images/projects/ml-collage/15_Kim Gaucher 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/07_Kia Nurse_FB.jpg">
+																				<img src="images/projects/ml-collage/07_Kia Nurse_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/09_Natalie Achonwa 2_IG.jpg">
+																				<img src="images/projects/ml-collage/09_Natalie Achonwa 2_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/17_Sami Hill_FB.jpg">
+																				<img src="images/projects/ml-collage/17_Sami Hill_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/08_Aislin Konnig 2_IG.jpg">
+																				<img src="images/projects/ml-collage/08_Aislin Konnig 2_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/21_Aaliyah Edwards 2_IG.jpg">
+																				<img src="images/projects/ml-collage/21_Aaliyah Edwards 2_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/20_Denise Dignard 1_IG.jpg">
+																				<img src="images/projects/ml-collage/20_Denise Dignard 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/13_Miah-Marie Langlois 1_IG.jpg">
+																				<img src="images/projects/ml-collage/	13_Miah-Marie Langlois 1_IG.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/10_Ruth Hamlin_FB.jpg">
+																				<img src="images/projects/ml-collage/10_Ruth Hamlin_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/ml-collage/16_Nayo Raincock-Ekunwe_FB.jpg">
+																				<img src="images/projects/ml-collage/16_Nayo Raincock-Ekunwe_FB.jpg" alt="img" />
+																		</a>
+																</div>
+
+														</div>
+														<!--/Collage -->
+
+											<div class="vc_row full has-animation" data-delay="10">
 
                         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/691533641?h=caf735a97b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Madlove x Basketball Canada"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
