--- a/mad-love.html
+++ b/mad-love.html
@@ -401,8 +401,10 @@
 
 														</div>
 														<!--/Collage -->
+													</div>
+												</div>
 
-											<div class="vc_row full has-animation" data-delay="10">
+											<div class="vc_row row_padding_top full has-animation" data-delay="10">
 
                         <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/691533641?h=caf735a97b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Madlove x Basketball Canada"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
