--- a/misc.html
+++ b/misc.html
@@ -150,78 +150,66 @@
 								</div>
 								<!--/Row -->
 
-								<!-- Row -->
-								<div class="vc_row">
+										<!-- Collage -->
+										<div id="justified-grid">
 
-										<div class="container">
+												<!-- Collage item with pop-up -->
 
-												<div class="one_half">
-
-														<figure class="has-animation" data-delay="10" >
-															<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
-																	<source src="motion/LFS_BHM_endboard.mp4" type="video/mp4">
-															</video>
-																<figcaption><h6>Logo Design</h6></figcaption>
-														</figure>
-
+												<div class="collage-thumb">
+													<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
+															<source src="motion/LFS_BHM_endboard.mp4" type="video/mp4">
+															<h6><div class="thumb-info">Logo Design</div></h6>
+														</a>
 												</div>
 
-												<div class="one_half last">
-
-														<figure class="has-animation" data-delay="20" >
-																<img src="images/projects/bhm02.jpg" alt="Image Title">
-																<figcaption><h6>T-Shirt Design</h6></figcaption>
-														</figure>
-
+												<div class="collage-thumb">
+														<a class="image-link" href="images/projects/bhm02.jpg">
+																<img src="images/projects/bhm02.jpg" alt="img"/>
+																<h6><div class="thumb-info">T-Shirt Design</div></h6>
+														</a>
 												</div>
 
-										</div>
+												<!-- Collage item with pop-up -->
+												<div class="collage-thumb">
+														<a class="image-link" href="images/projects/bhm01.jpg">
+																<img src="images/projects/bhm01.jpg" alt="img"/>
+																<h6><div class="thumb-info">Scotiabank Arena, In-Bowl</div></h6>
+														</a>
+												</div>
 
-								</div>
-								<!--/Row -->
+												<!-- Collage item with pop-up -->
+												<div class="collage-thumb">
+														<a class="image-link" href="images/projects/bhm03.jpg">
+																<img src="images/projects/bhm03.jpg" alt="img"/>
+																<h6><div class="thumb-info">Player Helmet Decal</div></h6>
+														</a>
+												</div>
 
-										<!-- Row -->
-										<div class="vc_row">
-
-												<div class="container">
-
-														<div class="one_half">
-
-																<figure class="has-animation" data-delay="10" >
-																		<img src="images/projects/bhm01.jpg" alt="Image Title">
-																		<figcaption><h6>Scotiabank Arena, In-Bowl</h6></figcaption>
-																</figure>
-
-														</div>
-
-														<div class="one_half last">
-
-																<figure class="has-animation" data-delay="20" >
-																		<img src="images/projects/bhm03.jpg" alt="Image Title">
-																		<figcaption><h6>Player Helmet Decal</h6></figcaption>
-																</figure>
-
-														</div>
-
+												<!-- Collage item with pop-up -->
+												<div class="collage-thumb">
+														<a class="image-link" href="images/projects/bhm04.jpg">
+																<img src="images/projects/bhm04.jpg" alt="img" />
+																<h6><div class="thumb-info">Player Helmet Decal</div></h6>
+														</a>
 												</div>
 
 										</div>
-										<!--/Row -->
+										<!--/Collage -->
 
 										<!-- Row -->
-										<!-- <div class="vc_row row_padding_top">
+										<div class="vc_row row_padding_top">
 
 												<div class="container">
 
 													<p>project</p>
-													<h4 class="has-animation" data-delay="10">KYLE Lowry, Scotiabank Arena Return</h4>
+													<h4 class="has-animation" data-delay="10">KYLE Lowry, GROAT</h4>
 													<p></p>
 												</div>
-										</div> -->
+										</div>
 										<!--/Row -->
 
 										<!--/Row -->
-										<!-- <div class="vc_row">
+										<div class="vc_row">
 												<div class="container">
 														<figure class="has-animation" data-delay="10" >
 															<div class="video-wrapper">
@@ -231,8 +219,8 @@
 															</video>
 														</div>
 														</figure>
-												</div>
-										</div> -->
+
+										</div>
 										<!--/Row -->
 
 										<!-- Row -->
@@ -272,6 +260,7 @@
 																			<source src="motion/TFC_PRIDE_MAIN.mp4" type="video/mp4">
 																	</video>
 																		<figcaption><h6>Toronto FC Usage</h6></figcaption>
+
 																</figure>
 
 														</div>
