--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -212,13 +212,57 @@
 										<!-- Row -->
 										<div class="vc_row full">
 
-											<div class="container">
+												<div class="container has-animation" data-delay="100">
 
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/tunnel01.png" alt="Image Title">
-												</figure>
+														<!-- Collage -->
+														<div id="justified-grid">
 
-											</div>
+															<!-- Collage item with pop-up -->
+															<div class="collage-thumb">
+																	<a class="image-link" href="images/projects/tunnel01.jpg">
+																			<img src="images/projects/tunnel01.png" alt="img" />
+																			<h6><div class="thumb-info">Left Wall Graphic</div></h6>
+																	</a>
+															</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/tunnel02.jpg">
+																				<img src="images/projects/tunnel02.png" alt="img" />
+																				<h6><div class="thumb-info">Right	Wall Graphic</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/tunnel03.jpg">
+																				<img src="images/projects/tunnel03.jpg" alt="img" />
+																				<h6><div class="thumb-info">SBA Tunnel</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/tunnel04.jpg">
+																				<img src="images/projects/tunnel04.jpg" alt="img" />
+																				<h6><div class="thumb-info">SBA Tunnel</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/tunnel05.jpg">
+																				<img src="images/projects/tunnel05.jpg" alt="img" />
+																				<h6><div class="thumb-info">SBA Tunnel</div></h6>
+																		</a>
+																</div>
+
+
+
+														</div>
+														<!--/Collage -->
+
+												</div>
 
 										</div>
 										<!--/Row -->
@@ -229,35 +273,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/tunnel02.png" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/tunnel03.jpg" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/tunnel04.jpg" alt="Image Title">
+													<img src="images/projects/tunnel-social.jpg" alt="Image Title">
 												</figure>
 
 											</div>
