--- a/fifa-2026.html
+++ b/fifa-2026.html
@@ -362,7 +362,103 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row row_padding_top">
+										<div class="vc_row full row_padding_top">
+
+												<div class="container has-animation" data-delay="100">
+
+														<!-- Collage -->
+														<div id="justified-grid">
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana01.jpg">
+																				<img src="images/projects/NCampana01.jpg" alt="img" />
+																				<h6><div class="thumb-info">Mayor John Tory</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana02.jpg">
+																				<img src="images/projects/NCampana02.jpg" alt="img" />
+																				<h6><div class="thumb-info">Dwayne De Rosario</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana03.jpg">
+																				<img src="images/projects/NCampana03.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Chairman Larry Tanenbaum</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana04.jpg">
+																				<img src="images/projects/NCampana04.jpg" alt="img"/>
+																				<h6><div class="thumb-info">FIFA Delegates</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana05.jpg">
+																				<img src="images/projects/NCampana05.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Cleats Gifting</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana06.jpg">
+																				<img src="images/projects/NCampana06.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Cleats Gifting</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana07.jpg">
+																				<img src="images/projects/NCampana07.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Perfect Bound Book</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana08.jpg">
+																				<img src="images/projects/NCampana08.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Mayor John Tory</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana09.jpg">
+																				<img src="images/projects/NCampana09.jpg" alt="img"/>
+																				<h6><div class="thumb-info">Panel</div></h6>
+																		</a>
+																</div>
+
+																<!-- Collage item with pop-up -->
+																<div class="collage-thumb">
+																		<a class="image-link" href="images/projects/NCampana10.jpg">
+																				<img src="images/projects/NCampana10.jpg" alt="img"/>
+																				<h6><div class="thumb-info">BMO Field Site Visit</div></h6>
+																		</a>
+																</div>
+
+														</div>
+														<!--/Collage -->
+
+												</div>
+
+										</div>
+										<!--/Row -->
+
+										<!-- Row -->
+										<!-- <div class="vc_row row_padding_top">
 
 												<div class="container">
 
@@ -385,34 +481,9 @@
 														</div>
 												</div>
 
-										</div>
+										</div> -->
 										<!--/Row -->
 
-										<!-- Row -->
-										<div class="vc_row">
-
-												<div class="container">
-
-														<div class="one_half">
-
-																<figure class="has-animation" data-delay="10" >
-																	<img src="images/projects/NCampana04.jpeg" alt="Image Title">
-																</figure>
-
-														</div>
-
-														<div class="one_half last">
-
-																<figure class="has-animation" data-delay="20" >
-																	<img src="images/projects/NCampana05.jpeg" alt="Image Title">
-																</figure>
-
-														</div>
-
-												</div>
-
-										</div>
-										<!--/Row -->
 
 										<!-- Row -->
 
@@ -436,7 +507,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/NCampana06.jpeg" alt="Image Title">
+													<img src="images/projects/NCampana11.jpg" alt="Image Title">
 												</figure>
 
 											</div>
