raptors image naming update

--- a/raptors-tunnel.html
+++ b/raptors-tunnel.html
@@ -219,7 +219,7 @@
 
 															<!-- Collage item with pop-up -->
 															<div class="collage-thumb">
-																	<a class="image-link" href="images/projects/tunnel01.jpg">
+																	<a class="image-link" href="images/projects/tunnel01.png">
 																			<img src="images/projects/tunnel01.png" alt="img" />
 																			<h6><div class="thumb-info">Left Wall Graphic</div></h6>
 																	</a>
@@ -227,7 +227,7 @@
 
 																<!-- Collage item with pop-up -->
 																<div class="collage-thumb">
-																		<a class="image-link" href="images/projects/tunnel02.jpg">
+																		<a class="image-link" href="images/projects/tunnel02.png">
 																				<img src="images/projects/tunnel02.png" alt="img" />
 																				<h6><div class="thumb-info">Right	Wall Graphic</div></h6>
 																		</a>
