--- a/misc.html
+++ b/misc.html
@@ -150,11 +150,15 @@
 								</div>
 								<!--/Row -->
 
+								<!-- Row -->
+								<div class="vc_row full">
+
+										<div class="container has-animation" data-delay="100">
+
 										<!-- Collage -->
 										<div id="justified-grid">
 
 												<!-- Collage item with pop-up -->
-
 												<div class="collage-thumb">
 													<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
 															<source src="motion/LFS_BHM_endboard.mp4" type="video/mp4">
@@ -162,6 +166,7 @@
 														</a>
 												</div>
 
+												<!-- Collage item with pop-up -->
 												<div class="collage-thumb">
 														<a class="image-link" href="images/projects/bhm02.jpg">
 																<img src="images/projects/bhm02.jpg" alt="img"/>
@@ -195,6 +200,8 @@
 
 										</div>
 										<!--/Collage -->
+									</div>
+								</div>
 
 										<!-- Row -->
 										<div class="vc_row row_padding_top">
@@ -268,7 +275,7 @@
 												</div>
 
 										</div>
-										<!--/Row -->									
+										<!--/Row -->
 
                 	<!--/Main Page Content -->
 
