--- a/globljam.html
+++ b/globljam.html
@@ -153,7 +153,9 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">Established a holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE competing in an Under-23 tournament. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS and the intersection of music, fashion, community and diversity. Broadcast by Sportsnet.</h5>
+													<h5 class="has-animation" data-delay="10">Established a holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE competing in an Under-23 tournament. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS and the intersection of music, fashion, community and diversity. Broadcast by Sportsnet.
+													<br class="destroy"><a href="http://globljam.ca/" style="color:#35FF69;">www.GLOBLJAM.ca</a></h5>
+
 
 												</div>
 
@@ -218,15 +220,105 @@
 										<!--/Row -->
 
 										<!-- Row -->
-                    <div class="vc_row row_padding_top">
-                        <div class="container">
+										<div class="vc_row full">
 
-                            <h2>COMING SOON</h2>
-														<h5><a href="http://globljam.ca/" style="color:#35FF69;">Check out GLOBLJAM.ca</a></h5>
+											<div class="container">
 
-                        </div>
-                    </div>
-                    <!--/Row -->
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/gj01.jpg" alt="Image Title">
+												</figure>
+
+											</div>
+
+										</div>
+										<!--/Row -->
+
+										<!-- Row -->
+										<div class="vc_row full">
+
+											<div class="container">
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/gj02.jpg" alt="Image Title">
+												</figure>
+
+											</div>
+
+										</div>
+										<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+													<div class="container">
+
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/gj03.jpg" alt="Image Title">
+														</figure>
+
+													</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+													<div class="container">
+
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/gj04.jpg" alt="Image Title">
+														</figure>
+
+													</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+													<div class="container">
+
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/gj05.png" alt="Image Title">
+														</figure>
+
+													</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+													<div class="container">
+
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/gj06.jpg" alt="Image Title">
+														</figure>
+
+													</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+													<div class="container">
+
+														<figure class="has-animation" data-delay="50" >
+															<img src="images/projects/gj07.png" alt="Image Title">
+														</figure>
+
+													</div>
+
+												</div>
+												<!--/Row -->
+
+
+
 
                 	<!--/Main Page Content -->
 
