--- a/globljam.html
+++ b/globljam.html
@@ -194,7 +194,7 @@
 										<!--/Row -->
 
 										<!-- Row -->
-										<div class="vc_row">
+										<div class="vc_row row_padding_bottom">
 
 												<div class="container">
 
