--- a/globljam.html
+++ b/globljam.html
@@ -153,7 +153,7 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">Established a holistic creative direction for Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE competing in an Under-23 tournament. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS and the intersection of music, fashion, community and diversity. Broadcast by Sportsnet.
+													<h5 class="has-animation" data-delay="10">Introducing Canada Basketball’s first annual Next Gen Tournament in Toronto 2022. Full brand identity and supporting collateral designed for the international invitational to showcase TALENT FROM ACROSS THE GLOBE competing in an Under-23 tournament. Spotlighting the WOMEN'S AND MEN'S Fiba TEAMS and the intersection of music, fashion, community and diversity. This is the world's showcase.
 													<br class="destroy"><a href="http://globljam.ca/" style="color:#35FF69;">www.GLOBLJAM.ca</a></h5>
 
 
