assets added to ctg

--- a/fdn-ctg.html
+++ b/fdn-ctg.html
@@ -221,7 +221,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ml01.jpg" alt="Image Title">
+													<img src="images/projects/ctg01.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -235,7 +235,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ml02.jpg" alt="Image Title">
+													<img src="images/projects/ctg02.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -249,7 +249,7 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ml03.jpg" alt="Image Title">
+													<img src="images/projects/ctg03.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -263,7 +263,35 @@
 											<div class="container">
 
 												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/ml04.jpg" alt="Image Title">
+													<img src="images/projects/ctg04.jpg" alt="Image Title">
+												</figure>
+
+											</div>
+
+										</div>
+										<!--/Row -->
+
+										<!-- Row -->
+										<div class="vc_row full">
+
+											<div class="container">
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/ctg05.jpg" alt="Image Title">
+												</figure>
+
+											</div>
+
+										</div>
+										<!--/Row -->
+
+										<!-- Row -->
+										<div class="vc_row full">
+
+											<div class="container">
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/ctg06.jpg" alt="Image Title">
 												</figure>
 
 											</div>
@@ -275,9 +303,9 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/toronto-fifa-hero.jpg)"></div>
-                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="fifa-2026.html">
-                                <div class="main-title">FIFA <span>2026</span></div>
+                            <div class="next-project-image" style="background-image:url(images/globljam-hero.jpg)"></div>
+                            <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="globljam.html">
+                                <div class="main-title">GLOBL <span>JAM</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
